--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
 .App {
 	text-align: center;
+	display: flex;
+	flex-direction: row;
 }
 form {
 	border: 2px solid rgb(14, 15, 14);
 	padding: 30px;
 }
 img {
-	height: 120px;
-	margin-left: 90px;
-	margin-bottom: 10px;
-	display: block;
-	border: 1px solid black;
-	border-radius: 50%;
 }
 .App-header {
 	background-color: white;
@@ -26,11 +22,13 @@ img {
 .tax {
 	display: flex;
 	flex-direction: row;
+	padding: 10px;
 }
-.tax-left {
-	width: 50%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+.maam {
+	gap: 10px;
+}
+.box {
+	border: 2px solid rgb(14, 15, 14);
+	padding: 10px;
+	width: 100px;
 }
