--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,4 @@
-.App {
-	text-align: center;
+#app {
 	display: flex;
 	flex-direction: row;
-}
-form {
-	border: 2px solid rgb(14, 15, 14);
-	padding: 30px;
-}
-img {
-}
-.App-header {
-	background-color: white;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: black;
-}
-.tax {
-	display: flex;
-	flex-direction: row;
-	padding: 10px;
-}
-.maam {
-	gap: 10px;
-}
-.box {
-	border: 2px solid rgb(14, 15, 14);
-	padding: 10px;
-	width: 100px;
 }
