--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -9,3 +9,12 @@
 img {
 	width: 500px;
 }
+@media (max-width: 768px) {
+	img {
+		width: 300px;
+	}
+	.card {
+		margin: 0;
+		flex-direction: column;
+	}
+}
